--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.0</version>
+        <version>2.5.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.javatechie</groupId>
@@ -21,7 +21,7 @@
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
-<!--        <spring-cloud.version>2020.0.3</spring-cloud.version>-->
+       <spring-cloud.version>2020.0.3</spring-cloud.version>
         <spring-cloud.version>2020.0.0-M5</spring-cloud.version>
     </properties>
     <dependencies>
